Resolve layout problems post merge from master.

--- a/src/components/BookTemplateDetails/style.scss
+++ b/src/components/BookTemplateDetails/style.scss
@@ -4,9 +4,7 @@
 .page {
   &__body {
 
-    &-header {
-      lost-column: 12/12;
-    }
+
 
     &-book {
       lost-flex-container: row;
